tests/errors/guard-diff-avail.fil
comp Main<G: 6>(
  @interface[G] go_G: 1,
  @[G, G+3] in: 32,
  @[G, G+3] + @exact[G, G+1] g1: 1,
  @[G, G+4] + @exact[G+1, G+3] g2: 1,
) -> (
  @[G, G+3] out: 32
) {
  out = g1 | g2 ? in;
}
